cmake_minimum_required(VERSION 2.8)

PROJECT(LaneDetection_Demo)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/)

FIND_PACKAGE(OpenCV REQUIRED)

SET(SRC1
 main.cpp
)
SET(SRC2
 main1.cpp
)



ADD_EXECUTABLE(demo1 ${SRC1})
TARGET_LINK_LIBRARIES(demo1  ${OpenCV_LIBS})
ADD_EXECUTABLE(demo2 ${SRC2})
TARGET_LINK_LIBRARIES(demo2  ${OpenCV_LIBS})
